Project Page Addition and Deployment Understanding

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,4 +1,6 @@
 <header>{{pageTitle}} 
     <a href="/">Home Page</a>
     <a href="/about">About Page</a>
+    <a href="/project">Project Page</a>
+
 </header>
